--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@ body {
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
   color: #111;
-  background: url('images/background.png') #edeff0;
+  background: url('images/background.svg') #edeff0;
+  /* Using the background-size property to match the original size, and let the repeat do the job for the pattern */
+  background-size: 50px 47px;
 }
 
 #container {
