--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,15 @@ header {
     line-height: 1em;
   }
 
+  .logo {
+    width: 140px;
+    height: 120px;
+  }
+
+#logo-text {
+  display: none;
+}
+
 main {
   padding-top: 50px;
 }
@@ -77,3 +86,37 @@ footer {
   padding-bottom: 30px;
   color: #ba8058;
 }
+
+
+
+
+/* ================
+
+Media Queries 
+
+=================*/
+
+
+@media (max-width: 420px) {
+  .logo-text-paths {
+    display: none;
+  }
+
+  #logo-text {
+    display: block;
+    font-size: 20px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
