--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ a {
   color: #39add1;
   font-weight: 700;
   }
+
   a:hover {
     color: #111;
   }
@@ -93,6 +94,16 @@ header {
   header nav ul li {
     display: inline-block;
     margin-right: 20px;
+    transition: transform .5s ease-out;
+    -webkit-transition: transform .5s ease-out;
+  }
+  
+  header nav ul li:hover {
+    transform: scale(1.3);
+    -webkit-tranform: scale(1.3);
+  }
+  nav a:hover path {
+    fill: #111;
   }
 
   .nav-icon {
@@ -132,6 +143,13 @@ main {
     }
       main li svg {
         margin-bottom: 15px;
+        transition: transform 0.6s ease-out;
+        -webkit-transition: transform 0.6s ease-out;
+      }
+
+      main li svg:hover {
+        transform: rotate(30deg);
+        -webkit-transform: rotate(30deg);
       }
 
       .corgi {
